release 1.4.13 (adjustments to java8)